--- a/web/client/styles/app.less
+++ b/web/client/styles/app.less
@@ -29,6 +29,7 @@
 // Modules styles
 @import "app/Advertisement/module.less";
 @import "app/Instrument/module.less";
+@import "app/Tuning/module.less";
 @import "app/Lesson/module.less";
 @import "app/SheetMusic/module.less";
 @import "app/SongBook/module.less";
