--- a/web/client/src/app/Instrument/Partial/Specification/Guitar/form.html
+++ b/web/client/src/app/Instrument/Partial/Specification/Guitar/form.html
@@ -1,3 +1,62 @@
-<div class="instrument-specification guitar-specification">
+<div class="instrument-specification guitar-specification row">
+    <div class="col-md-5">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                    <span class="fa-stack">
+                        <span class="fa fa-circle-thin fa-stack-2x"></span>
+                        <span class="music-icon music-icon-tuning fa-stack-1x"></span>
+                    </span>
+                    Tuning
+                </h3>
+            </div>
+            <div class="panel-body">
+                <tuning-widget data-strings="6"></tuning-widget>
+            </div>
+        </div>
+    </div>
 
+    <div class="col-md-7">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                    <span class="fa-stack">
+                        <span class="fa fa-circle-thin fa-stack-2x"></span>
+                        <span class="fa fa-info fa-stack-1x"></span>
+                    </span>
+                    Information
+                </h3>
+            </div>
+
+            <div class="panel-body">
+                <div class="form-group">
+                    <label for="">Left-handed</label>
+                    <div>
+                        <div class="radio-inline">
+                            <label>
+                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                                Yes
+                            </label>
+                        </div>
+                        <div class="radio-inline">
+                            <label>
+                                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                                No
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="">Nb strings</label>
+                    <input type="number" class="form-control" data-ng-model="" />
+                </div>
+
+                <div class="form-group">
+                    <label for="">Nb frets</label>
+                    <input type="number" class="form-control" data-ng-model="" />
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
