--- a/web/client/styles/app/Instrument/guitar.less
+++ b/web/client/styles/app/Instrument/guitar.less
@@ -1,84 +1,3 @@
-.tuning-widget {
-    .tuning-list {
-        margin-bottom: @line-height-computed;
-    }
-
-    .tuning-edit {
-        display: table;
-
-        .tuning-col {
-            display: table-cell;
-
-            &.strings-col {
-                width: 25%;
-                height: 100%;
-                vertical-align: top;
-
-                .strings-wrapper {
-                    position: relative;
-                    display: table;
-                    height: 100%;
-                    width: 100%;
-
-                    .strings-row {
-                        display: table-row;
-                        position: relative;
-                        height: floor(100% / 3);
-
-                        .strings-cell {
-                            font-size: 0;
-                            display: table-cell;
-                            vertical-align: middle;
-                            border-bottom: 1px solid fadeout(@brand-primary, 50%);
-
-                            .note-up {
-                                border-bottom-left-radius: 0;
-                                border-bottom-right-radius: 0;
-                                width: 50px;
-                                border-bottom: none;
-                            }
-
-                            input {
-                                text-align: center;
-                                vertical-align: middle;
-                                border-radius: 0;
-
-                                width: 50px;
-                                margin: 0 auto;
-                                padding: 4px;
-                            }
-
-                            .note-down {
-                                border-top-left-radius: 0;
-                                border-top-right-radius: 0;
-                                width: 50px;
-                                border-top: none;
-                            }
-                        }
-
-                        &:first-child {
-                            > div {
-                                border-top: 1px solid fadeout(@brand-primary, 50%);
-                            }
-                        }
-                    }
-                }
-
-                &.headstock {
-                    padding: 0 5px;
-                    font-size: 0;
-                    width: 50%;
-                    opacity: 0.5;
-
-                    .headstock-img {
-                        width: 100%;
-                    }
-                }
-            }
-        }
-    }
-}
-
 .shape-widget {
     display: table;
     width: 100%;
@@ -92,6 +11,33 @@
 
         &.body-col {
             width: 75%;
+        }
+    }
+}
+
+.guitar-neck {
+    position: relative;
+    width: 100%;   // Fill the parent container
+    margin-bottom: @line-height-computed;
+
+    .fret-layer {
+        position: relative;
+        width: 100%;
+        height: 100%;
+
+        .fret-selector {
+            position: absolute;
+            width: 30px;
+            top: 0;
+            padding: 5px;
+
+            &.fret-selector-first {
+                left: 0;
+            }
+
+            &.fret-selector-last {
+                right: 0;
+            }
         }
     }
 }
