--- a/web/client/styles/core/panels.less
+++ b/web/client/styles/core/panels.less
@@ -1,5 +1,24 @@
 .panel {
+    .panel-heading {
+        padding-bottom: 0;
+
+        .panel-title {
+            position: relative;
+            color: @brand-primary;
+
+            &:after {
+                position: absolute;
+                content: " ";
+                display: block;
+                left: 30px;
+                right: 0;
+                bottom: 0;
+                border-bottom: 1px dashed @brand-primary;
+            }
+        }
+    }
+
     .box-shadow(none);
     border: none;
-    margin-bottom: 15px;
+    margin-bottom: floor(@grid-gutter-width / 2);
 }
