--- a/web/client/styles/core/dropdowns.less
+++ b/web/client/styles/core/dropdowns.less
@@ -61,6 +61,10 @@
                     }
                 }
             }
+
+            small {
+                color: @gray;
+            }
         }
 
         .divider {
