WIP adaptative TuningWidget

--- a/web/client/src/app/Instrument/Partial/Specification/Guitar/form.html
+++ b/web/client/src/app/Instrument/Partial/Specification/Guitar/form.html
@@ -13,7 +13,7 @@
 
                         <div class="form-group">
                             <label for="">Nb strings</label>
-                            <input type="number" class="form-control" data-ng-model="specification.attributes.strings" />
+                            <input type="number" min="4" max="18" class="form-control" data-ng-model="specification.attributes.strings" />
                         </div>
 
                         <div class="form-group">
