--- a/web/client/styles/app/Instrument/instrument.less
+++ b/web/client/styles/app/Instrument/instrument.less
@@ -3,6 +3,13 @@
 }
 
 .instrument-type {
+    > span {
+        background: @panel-bg;
+        color: @brand-primary;
+        padding: @padding-base-vertical @padding-base-horizontal;
+        display: block;
+    }
+
     .dropdown {
         .dropdown-menu {
             background: @panel-bg;
