--- a/web/client/src/app/User/Partial/settings.html
+++ b/web/client/src/app/User/Partial/settings.html
@@ -4,64 +4,67 @@
         My settings
     </layout-page-title>
 
-    <fieldset class="form-group">
-        <legend>Localization</legend>
+    <!-- Localization -->
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="form-group">
+                <label for="" class="control-label">Language</label>
+            </div>
 
-        <div class="panel panel-default panel-last">
-            <div class="panel-body">
-                <div class="form-group">
-                    <label for="" class="control-label">Language</label>
-                </div>
+            <div class="form-group">
+                <label for="" class="control-label">Currency</label>
+            </div>
 
-                <div class="form-group">
-                    <label for="" class="control-label">Currency</label>
-                </div>
-
-                <div class="form-group">
-                    <label for="" class="control-label">Date Format</label>
-                </div>
+            <div class="form-group">
+                <label for="" class="control-label">Date Format</label>
             </div>
         </div>
-    </fieldset>
-
-    <fieldset class="form-group">
-        <legend>Music</legend>
-
-        <div class="panel panel-default panel-last">
-            <div class="panel-body">
-                <div class="form-group">
-                    <label for="" class="control-label">Display Flat or Sharp</label>
-                </div>
-
-                <div class="form-group">
-                    <label for="" class="control-label">Notes name (Anglo-Saxon / Latin)</label>
-                </div>
-
-                <div class="form-group">
-                    <label for="" class="control-label">Semitome or Whole tone</label>
-                </div>
-
-                <div class="form-group">
-                    <label for="" class="control-label">Display Interval (semitones / name / symbol)</label>
-                </div>
-
-                <div class="form-group">
-                    <label for="" class="control-label">Diapason (Note = A / Octave = 3 / Frequency = 440Hz)</label>
-                </div>
-
-                <div class="form-group">
-                    <label for="" class="control-label">Score display (Only score / Only tab / Both)</label>
-                </div>
-
-            </div>
-        </div>
-    </fieldset>
-
-    <div class="form-group">
-        <label for="" class="control-label">Volume</label>
     </div>
 
-    <div class="form-group">
-        <label for="" class="control-label">List default display</label>
+    <!-- Interface -->
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="form-group">
+                <label for="" class="control-label">Theme</label>
+            </div>
+
+            <div class="form-group">
+                <label for="" class="control-label">List default display</label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Music -->
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="form-group">
+                <label for="" class="control-label">Volume</label>
+            </div>
+
+            <div class="form-group">
+                <label for="" class="control-label">Display Flat or Sharp</label>
+            </div>
+
+            <div class="form-group">
+                <label for="" class="control-label">Notes name (Anglo-Saxon / Latin)</label>
+            </div>
+
+            <div class="form-group">
+                <label for="" class="control-label">Semitome or Whole tone</label>
+            </div>
+
+            <div class="form-group">
+                <label for="" class="control-label">Display Interval (semitones / name / symbol)</label>
+            </div>
+
+            <div class="form-group">
+                <label for="" class="control-label">Diapason (Note = A / Octave = 3 / Frequency = 440Hz)</label>
+            </div>
+
+            <div class="form-group">
+                <label for="" class="control-label">Score display (Only score / Only tab / Both)</label>
+            </div>
+
+        </div>
     </div>
 </layout-page>
