--- a/web/client/styles/app.less
+++ b/web/client/styles/app.less
@@ -19,6 +19,7 @@
 // Add core styles
 @import "core/alerts.less";
 @import "core/buttons.less";
+@import "core/debug.less";
 @import "core/dropdowns.less";
 @import "core/fields.less";
 @import "core/flags.less";
