--- a/web/client/styles/core/alerts.less
+++ b/web/client/styles/core/alerts.less
@@ -30,5 +30,13 @@
             display: inline-block;
             margin-left: 40px;
         }
+
+        .alert-link {
+            padding: 10px;
+            font-weight: normal;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
     }
 }
