--- a/web/client/styles/variables.less
+++ b/web/client/styles/variables.less
@@ -595,20 +595,20 @@
 @modal-title-line-height:     @line-height-base;
 
 //** Background color of modal content area
-@modal-content-bg:                             fadeIn(@panel-bg, 50%);
+@modal-content-bg:                             @panel-bg;
 //** Modal content border color
 @modal-content-border-color:                   transparent;
 //** Modal content border color **for IE8**
 @modal-content-fallback-border-color:          transparent;
 
 //** Modal backdrop background color
-@modal-backdrop-bg:           #000;
+@modal-backdrop-bg:           @body-bg;
 //** Modal backdrop opacity
-@modal-backdrop-opacity:      .60;
+@modal-backdrop-opacity:      .85;
 //** Modal header border color
 @modal-header-border-color:   @modal-content-bg;
 //** Modal footer border color
-@modal-footer-border-color:   @modal-content-bg;
+@modal-footer-border-color:   transparent;
 
 @modal-lg:                    900px;
 @modal-md:                    600px;
