wip implement wysiwyg edition

--- a/app/client/src/app/Instrument/Partial/Instrument/menu.html
+++ b/app/client/src/app/Instrument/Partial/Instrument/menu.html
@@ -1,6 +1,6 @@
 <ul class="instrument-menu">
     <!-- Scale dropdown -->
-    <li class="scale-dropdown" data-uib-dropdown="">
+    <!--<li class="scale-dropdown" data-uib-dropdown="">
         <a href="#" data-uib-dropdown-toggle="" role="button">
             <span class="fa-stack">
                 <span class="fa fa-circle-thin fa-stack-2x"></span>
@@ -43,7 +43,7 @@
                 </a>
             </li>
         </ul>
-    </li>
+    </li>-->
 
     <!-- Instrument dropdown -->
     <li class="guitar-dropdown" data-uib-dropdown="">
