--- a/app/client/styles/theme.less
+++ b/app/client/styles/theme.less
@@ -65,7 +65,7 @@ input[type=reset] {
     overflow-y: auto;
     padding-top: floor(@grid-gutter-width / 2);
     padding-bottom: floor(@grid-gutter-width / 2);
-    background: url("../images/background.jpg") repeat scroll center top;
+    background: @content-bg;
 
     &.mCS_no_scrollbar {
         .container-fluid {
