--- a/app/client/styles/variables.custom.less
+++ b/app/client/styles/variables.custom.less
@@ -1,3 +1,5 @@
+@content-bg: url("../images/background.jpg") repeat scroll center top;
+
 // Default transition used across the application
 @transition-base:            all .30s ease-in-out;
 
