--- a/app/client/src/app/Instrument/Partial/Instrument/show.html
+++ b/app/client/src/app/Instrument/Partial/Instrument/show.html
@@ -1,50 +1,110 @@
 <layout-page>
     <!-- Header buttons -->
-    <ui-header-buttons>
-        <ui-header-button class="nav-link-danger">
+    <ui-header-nav class="ui-header-tabs">
+        <li role="presentation" class="active">
             <a href="">
-                <span class="fa fa-fw fa-trash-o"></span>
-                Delete
+                <span class="fa fa-fw fa-info"></span>
+                information
             </a>
-        </ui-header-button>
+        </li>
 
-        <ui-header-button class="nav-link-default">
-            <a href="#/instruments/{{ showCtrl.resource.id }}/edit">
-                <span class="fa fa-fw fa-pencil"></span>
-                Edit
+        <li role="presentation">
+            <a href="">
+                <span class="fa fa-fw fa-eye"></span>
+                visualization
             </a>
-        </ui-header-button>
-    </ui-header-buttons>
+        </li>
+    </ui-header-nav>
 
     <!-- Title of the page -->
     <layout-page-title>
-        {{ showCtrl.resource.attributes.manufacturer }}
+        <a href="#/instruments">{{ 'my_instruments_title'|translate }}</a>
 
-        <small data-ng-if="null !== showCtrl.resource.attributes.model">{{ showCtrl.resource.attributes.model }}</small>
+        <small>{{ showCtrl.resource.attributes.name || 'click to name the instrument' }}</small>
+
+        <!-- List of available templates for the current InstrumentType -->
+        <div class="instrument-templates" data-uib-dropdown="" data-ng-if="showCtrl.templates && 0 !== showCtrl.templates.length">
+            <a href="" id="templates-dropdown" data-uib-dropdown-toggle="">
+                <span class="fa fa-fw fa-database"></span>
+                select a template to fill information
+                <span class="caret"></span>
+            </a>
+
+            <ul class="dropdown-menu-check" data-uib-dropdown-menu="" aria-labelledby="templates-dropdown">
+                <li data-ng-repeat="template in showCtrl.templates" data-ng-class="{ active: template === showCtrl.selectedTemplate }">
+                    <a href="" role="button" data-ng-click="showCtrl.selectTemplate(template)">{{ template.attributes.name }}</a>
+                </li>
+            </ul>
+        </div>
     </layout-page-title>
 
     <div class="instrument-show row">
-        <div class="col-md-3">
-            <div class="widget instrument-type">
-                <span>{{ showCtrl.resource.relationships.instrumentType.data.attributes.name }}</span>
-                <img class="img-responsive instrument-type-img" data-ng-src="{{ 'images/' + showCtrl.resource.relationships.instrumentType.data.attributes.icon |asset_path }}" />
+        <div class="col-md-2">
+            <div class="form-group" style="margin-bottom: 30px;">
+                <div class="widget instrument-type">
+                    <div data-uib-dropdown="">
+                        <a href="" id="types-dropdown" data-uib-dropdown-toggle="">
+                            {{ showCtrl.resource.relationships.instrumentType.data.attributes.name }}
+                            <span class="fa fa-caret-down pull-right"></span>
+                        </a>
+
+                        <ul data-uib-dropdown-menu="" aria-labelledby="types-dropdown">
+                            <li data-ng-repeat="instrumentType in showCtrl.instrumentTypes" data-ng-class="{'active': instrumentType.id == showCtrl.resource.relationships.instrumentType.data.id }">
+                                <a href="" data-ng-click="showCtrl.setType(instrumentType)">{{ instrumentType.attributes.name }}</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <img class="img-responsive instrument-type-img" data-ng-src="{{ 'images/' + showCtrl.resource.relationships.instrumentType.data.attributes.icon |asset_path }}" />
+                </div>
             </div>
 
-            <br/>
+            <div style="margin-bottom: 30px;">
+                <ui-flag data-type="primary" data-value="isFavorite">
+                    <span class="fa fa-heart"></span>
+                    <span>Favorite</span>
+                </ui-flag>
 
-            <ui-flag data-type="primary" data-value="isFavorite">
-                <span class="fa fa-heart"></span>
-                <span>Favorite</span>
-            </ui-flag>
+                <ui-flag data-type="info" data-value="isDefault">
+                    <span class="fa fa-check-square-o"></span>
+                    <span>Default</span>
+                </ui-flag>
+            </div>
 
-            <ui-flag data-type="info" data-value="isDefault">
-                <span class="fa fa-check-square-o"></span>
-                <span>Default</span>
-            </ui-flag>
+            <a href="" class="btn btn-block btn-danger">
+                <span class="fa fa-fw fa-trash-o"></span>
+                Delete instrument
+            </a>
         </div>
 
-        <div class="col-md-9">
-            <div data-ng-include="'Specification/' + showCtrl.resource.relationships.instrumentType.data.attributes.prefix + '/show.html'|partial_path:'app/Instrument'"
+        <div class="col-md-10">
+            <!-- Generic instrument information -->
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="row">
+                        <!-- Manufacturer of the Instrument -->
+                        <div class="form-group col-md-6">
+                            <label class="control-label" for="instrument-manufacturer">Manufacturer</label>
+                            <input type="text" class="form-control" id="instrument-manufacturer" data-ng-model="showCtrl.resource.attributes.manufacturer" data-ng-change="showCtrl.save()" />
+                        </div>
+
+                        <!-- Model of the Instrument -->
+                        <div class="form-group col-md-6">
+                            <label class="control-label" for="instrument-model">Model</label>
+                            <input type="text" class="form-control" id="instrument-model" data-ng-model="showCtrl.resource.attributes.model" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Custom information for the InstrumentType -->
+            <instrument-specification-form
+                    data-type="showCtrl.resource.relationships.instrumentType.data"
+                    data-specification="showCtrl.resource.relationships.specification.data">
+            </instrument-specification-form>
+
+            <div data-ng-if="showCtrl.resource.relationships.instrumentType"
+                 data-ng-include="'Specification/' + showCtrl.resource.relationships.instrumentType.data.attributes.prefix + '/details.html'|partial_path:'app/Instrument'"
                  onload="specification = showCtrl.resource.relationships.specification.data">
             </div>
         </div>
