--- a/app/client/src/app/Lesson/Partial/Lesson/index.html
+++ b/app/client/src/app/Lesson/Partial/Lesson/index.html
@@ -1,21 +1,21 @@
 <layout-page class="page-list lesson-list">
     <!-- Header buttons -->
-    <ui-header-buttons>
+    <ui-header-nav class="ui-header-buttons">
         <!-- New Lesson button -->
-        <ui-header-button class="nav-link-default">
+        <li role="presentation" class="nav-link-default">
             <a href="#/lessons/new">
                 <span class="fa fa-fw fa-plus"></span>
                 {{ 'new_lesson'|translate }}
             </a>
-        </ui-header-button>
+        </li>
 
         <li class="divider"></li>
 
         <!-- List format button -->
-        <ui-header-button class="nav-link-default">
+        <li role="presentation" class="nav-link-default">
             <layout-list-formatter data-format="listCtrl.format"></layout-list-formatter>
-        </ui-header-button>
-    </ui-header-buttons>
+        </li>
+    </ui-header-nav>
 
     <!-- Title of the page -->
     <layout-page-title id="song-list">
