--- a/app/client/src/app/SongBook/Partial/Song/index.html
+++ b/app/client/src/app/SongBook/Partial/Song/index.html
@@ -1,21 +1,21 @@
 <layout-page class="page-list song-list">
     <!-- Header buttons -->
-    <ui-header-buttons>
+    <ui-header-nav class="ui-header-buttons">
         <!-- New Song button -->
-        <ui-header-button class="nav-link-default">
+        <li role="presentation" class="nav-link-default">
             <a href="#/songs/new">
                 <span class="fa fa-fw fa-plus"></span>
                 {{ 'new_song'|translate }}
             </a>
-        </ui-header-button>
+        </li>
 
         <li class="divider"></li>
 
         <!-- List format button -->
-        <ui-header-button class="nav-link-default">
+        <li role="presentation" class="nav-link-default">
             <layout-list-formatter data-format="listCtrl.format"></layout-list-formatter>
-        </ui-header-button>
-    </ui-header-buttons>
+        </li>
+    </ui-header-nav>
 
     <!-- Title of the page -->
     <layout-page-title id="song-list">
