--- a/app/client/src/core/Alert/Partial/alerts.html
+++ b/app/client/src/core/Alert/Partial/alerts.html
@@ -1,5 +1,5 @@
-<ul class="alerts list-unstyled" data-ng-if="alertsCtrl.alerts.length > 0">
-    <li data-ng-repeat="alert in alertsCtrl.alerts" data-ng-click="alertsCtrl.removeAlert(alert)" class="alert alert-{{ alert.type }}" role="alert">
+<div class="alerts" data-ng-if="alertsCtrl.alerts.length > 0">
+    <div data-ng-repeat="alert in alertsCtrl.alerts" data-ng-click="alertsCtrl.removeAlert(alert)" class="alert alert-{{ alert.type }}" role="alert">
         <span class="fa fa-fw" data-ng-class="{'fa-check': 'success' == alert.type, 'fa-times': 'danger' == alert.type, 'fa-exclamation': 'warning' == alert.type, 'fa-info': 'info' == alert.type }"></span>
         <span>{{ alert.title }}</span>
 
@@ -9,5 +9,9 @@
         </a>
 
         <!-- Action button -->
-    </li>
-</ul>
+    </div>
+
+    <button type="button" class="btn btn-default">
+        + 3
+    </button>
+</div>
