--- a/app/client/styles/core/alerts.less
+++ b/app/client/styles/core/alerts.less
@@ -1,18 +1,25 @@
 .alerts {
     position: fixed;
-    z-index: 10;
-    padding: 0;
-    right: floor(@grid-gutter-width / 2);
+    z-index: 0;
+    padding: 0 floor(@grid-gutter-width / 2);
     top: @navbar-height + 5px;
+    left: @sidebar-width;
+    right: 0;
+
+    text-align: center;
+    margin: 0;
 
     .alert {
+        z-index: 10;
+        position: relative;
+        min-width: 50%;
         .box-shadow(0 0 3px rgba(0, 0, 0, 0.5));
-        margin-bottom: 10px;
+        text-align: left;
+        display: inline-block;
         cursor: pointer;
         padding: 0;
+        margin: 0;
         border: none;
-
-        position: relative;
 
         .fa {
             height: 100%;
