--- a/app/client/styles/core/flags.less
+++ b/app/client/styles/core/flags.less
@@ -25,6 +25,8 @@
     width: 100%;
     color: @gray;
     background: @panel-bg;
+    border: none;
+    text-align: left;
     padding: 0;
 
     + .flag {
