--- a/web/html/app/Instrument/Partial/Instrument/form.html
+++ b/web/html/app/Instrument/Partial/Instrument/form.html
@@ -1,33 +1,33 @@
 <layout-page>
     <!-- Header buttons -->
-    <ui-header-buttons>
+    <ui-header-nav class="ui-header-buttons">
         <!-- Delete button while editing -->
-        <ui-header-button data-ng-if="formCtrl.resource.id" class="nav-link-danger">
+        <li role="presentation" data-ng-if="formCtrl.resource.id" class="nav-link-danger">
             <a href="">
                 <span class="fa fa-fw fa-trash-o"></span>
                 Delete
             </a>
-        </ui-header-button>
+        </li>
 
         <li class="divider" data-ng-if="formCtrl.resource.id"></li>
 
         <!-- Cancel -->
-        <ui-header-button class="nav-link-default">
+        <li role="presentation" class="nav-link-default">
             <a href="#/instruments">
                 <span class="fa fa-fw fa-times"></span>
                 Cancel
             </a>
-        </ui-header-button>
+        </li>
 
         <!-- Validate form -->
-        <ui-header-button class="nav-link-default">
+        <li role="presentation" class="nav-link-default">
             <a href="" data-ng-click="formCtrl.submit()">
                 <span class="fa fa-fw fa-check"></span>
                 <span data-ng-if="!formCtrl.resource.id">Create</span>
                 <span data-ng-if="formCtrl.resource.id">Edit</span>
             </a>
-        </ui-header-button>
-    </ui-header-buttons>
+        </li>
+    </ui-header-nav>
 
     <!-- Title of the page -->
     <layout-page-title>
