--- a/web/html/app/Instrument/Partial/Instrument/index.html
+++ b/web/html/app/Instrument/Partial/Instrument/index.html
@@ -1,21 +1,21 @@
 <layout-page class="page-list instrument-list">
     <!-- Header buttons -->
-    <ui-header-buttons>
+    <ui-header-nav class="ui-header-buttons">
         <!-- New Instrument button -->
-        <ui-header-button class="nav-link-default">
-            <a href="#/instruments/new">
+        <li role="presentation" class="nav-link-default">
+            <a href="" role="button" data-ng-click="listCtrl.new()">
                 <span class="fa fa-fw fa-plus"></span>
                 {{ 'new_instrument'|translate }}
             </a>
-        </ui-header-button>
+        </li>
 
         <li class="divider"></li>
 
         <!-- List format button -->
-        <ui-header-button class="nav-link-default">
+        <li role="presentation" class="nav-link-default">
             <layout-list-formatter data-format="listCtrl.format"></layout-list-formatter>
-        </ui-header-button>
-    </ui-header-buttons>
+        </li>
+    </ui-header-nav>
 
     <!-- Title of the page -->
     <layout-page-title id="song-list">
