--- a/web/html/app/Theory/Partial/Note/index.html
+++ b/web/html/app/Theory/Partial/Note/index.html
@@ -1,11 +1,11 @@
 <layout-page class="note-list">
     <!-- Header buttons -->
-    <ui-header-buttons>
+    <ui-header-nav class="ui-header-buttons">
         <!-- Note menu -->
-        <ui-header-button class="nav-link-default">
+        <li role="presentation" class="nav-link-default">
             <note-menu></note-menu>
-        </ui-header-button>
-    </ui-header-buttons>
+        </li>
+    </ui-header-nav>
 
     <!-- Title of the page -->
     <layout-page-title>
